# venomqa

./: .env.example  .gitignore  .gitlab-ci.yml.example  .pypirc.template  404.html  ARCHITECTURE_ANALYSIS_STATE_COVERAGE.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  MANIFEST.in  MIGRATION_PLAN.md  Makefile  PROJECT_TRACKER.md  README.md  SETUP.md  STATE_TRAVERSAL_MATH_AUDIT.md  conftest.py  demo.py  demo.tape  docker-compose.qa.yml  index.html  landing.html  mkdocs.yml  pyproject.toml  real_api_qa.py  real_qa_run.py  real_world_test.py  robots.txt  setup.py  setup.sh  sitemap.xml  smoke_test.py  spec-sample-app.md  spec.md  test_complex_branches.py  (+7 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml  venomqa.yml.example
ARCHITECTURE_V2/: index.html
CODE_OF_CONDUCT/: index.html
INVARIANTS_GUIDE/: index.html
actions/: __init__.py  auth.py  items.py
advanced/: index.html
advanced/custom-backends/: index.html
advanced/custom-reporters/: index.html
advanced/performance/: index.html
advanced/testing-patterns/: index.html
blog/: index.html
blog/2024-01-15-math-of-state-exploration/: index.html
blog/2024-01-20-why-sequence-bugs-hide/: index.html
blog/2024-01-25-state-machines-in-api-testing/: index.html
blog/2024-02-01-property-based-testing-comparison/: index.html
blog/2024-02-05-api-testing-tools-comparison/: index.html
blog/2024-02-10-database-rollback-testing/: index.html
blog/2024-02-15-ci-cd-api-testing/: index.html
changelog/: index.html
ci-cd/: index.html
cli-output/: index.html
comparison/: index.html
concepts/: index.html
concepts/branching/: index.html
concepts/journeys/: index.html
concepts/ports-adapters/: index.html
concepts/state/: index.html
concepts/theory/: index.html
contributing/: index.html
docker/: Dockerfile  Dockerfile.runner  Dockerfile.test  docker-compose.ci.yml  docker-compose.test.yml  docker-compose.yml
docker/scripts/: run-journeys.sh  wait-for-services.sh
docs/: ARCHITECTURE_V2.md  INVARIANTS_GUIDE.md  QUICKSTART.md  STATE_CHAIN_SPEC.md  STATE_EXPLORER_PROJECT.md  STATE_EXPLORER_TASKS.md  adapters.md  advanced.md  api.md  backends.md  changelog.md  ci-cd.md  cli-output.md  cli.md  comparison.md  contributing.md  examples.md  faq.md  index.md  journeys.md  landing.html  plugins.md  ports.md  preflight-configuration.md  roadmap.md
docs/advanced/: custom-backends.md  custom-reporters.md  index.md  performance.md  testing-patterns.md
docs/blog/: 2024-01-15-math-of-state-exploration.md  2024-01-20-why-sequence-bugs-hide.md  2024-01-25-state-machines-in-api-testing.md  2024-02-01-property-based-testing-comparison.md  2024-02-05-api-testing-tools-comparison.md  2024-02-10-database-rollback-testing.md  2024-02-15-ci-cd-api-testing.md  index.md
docs/concepts/: branching.md  index.md  journeys.md  ports-adapters.md  state.md  theory.md
docs/examples/: auth.md  checkout.md  crud.md  index.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/reference/: adapters.md  api.md  backends.md  cli.md  config.md  index.md  reporters.md
docs/specs/: framework-spec.md  index.md  publishing.md  state-chain.md  state-explorer.md
docs/stylesheets/: extra.css
docs/tutorials/: ci-cd.md  first-journey.md  index.md  payment-flows.md
docs_internal/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  DECISIONS.md  DEVELOPER_JOURNEY.md  METRICS.md  ONBOARDING.md  QA_REPORT_0.6.2.md  QA_REPORT_AGENT_LOOP2.md  README.md  RELEASE.md  TECH_DEBT.md
docs_internal/archive/: LAUNCH_PLAN.md  MIGRATION_PLAN.md  TESTING_FUNCTIONALITY_AUDIT.md
docs_v1/: architecture.md  index.md
docs_v1/adapters/: index.md
docs_v1/cli/: index.md
docs_v1/concepts/: overview.md  rollback.md
docs_v1/data-model/: index.md
examples/: README.md  index.html  mocking_example.py  preflight_config.yaml  preflight_example.py  state_graph_example.py
faq/: index.html
getting-started/: index.html
journeys/: __init__.py  example_crud.py  example_payment.py
k8s/: configmap.yaml  deployment.yaml
plugins/: index.html
preflight-configuration/: index.html
prototype_openapi_test/: ARCHITECTURE_V2.md  FINDINGS.md  INVARIANT_RULES.md  analyze_issues.py  test_openapi_parsing.py  v2_models.py
qa/: README.md  llm-context.md  venomqa.yaml
reference/: index.html
roadmap/: index.html
runtime-core/: README.md  pyproject.toml
runtime-core/src/runtime_core/: __init__.py  openapi_parser.py  protocols.py  resource_graph.py  type_system.py
runtime-core/tests/: __init__.py  test_openapi_parser.py  test_resource_graph.py
scripts/: generate-report.sh  install.sh  quickstart.sh  run-tests.sh
sdk/: PROTOCOL.md
search/: search_index.json
site/: 404.html  objects.inv  sitemap.xml
specs/: index.html
stylesheets/: extra.css
templates/: docker-compose.qa.yml
tests/: __init__.py  conftest.py  test_adapters_cache.py  test_adapters_concurrency.py  test_adapters_mail.py  test_adapters_queue.py  test_adapters_storage.py  test_adapters_time.py  test_assertions.py  test_backends.py  test_benchmark.py  test_client.py  test_combinatorial.py  test_comparison.py  test_data_generators.py  test_data_seeding.py  test_debug_features.py  test_doctor.py  test_domains_auth.py  test_domains_ecommerce.py  test_environments.py  test_errors.py  test_explorer_context.py  test_explorer_detector.py  test_explorer_discoverer.py  test_explorer_engine.py  test_explorer_integration.py  test_explorer_models.py  test_explorer_visualizer.py  test_fixtures_factories.py  test_graphql.py  test_integration.py  test_load_testing.py  test_mocking.py  test_models.py  test_notifications.py  test_observability.py  test_openapi_generator.py  test_performance.py  test_plugins.py  (+15 more)
tutorials/: index.html
venomqa/: __init__.py  config.py  context.py  main.py  preflight.py
(+755 files in other folders)
