[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runtime-core"
version = "0.1.0"
description = "A standalone reusable library for state-machine exploration tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "VenomQA Team" }
]
keywords = [
    "state-machine",
    "exploration",
    "testing",
    "openapi",
    "resource-graph",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
yaml = [
    "pyyaml>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
all = [
    "runtime-core[yaml,dev]",
]

[project.urls]
Homepage = "https://github.com/venomqa/runtime-core"
Documentation = "https://github.com/venomqa/runtime-core#readme"
Repository = "https://github.com/venomqa/runtime-core"

[tool.hatch.build.targets.wheel]
packages = ["src/runtime_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["runtime_core"]
